# pianke

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
pic_selecter/: vision.py
src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
src-tauri/frontend/: index.html
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  env_check.rs  launcher.rs  main.rs  python_runtime.rs  updater.rs
