[package]
name = "pianke"
version = "0.1.0"
edition = "2021"
description = "片刻 - 智能选片助手"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
url = "2"
sysinfo = "0.33"
env_logger = "0.11"
log = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
